--- a/Plate Visualization/Plate Visualization.csproj
+++ b/Plate Visualization/Plate Visualization.csproj
@@ -58,6 +58,7 @@
     <Compile Include="NewPlateForm.Designer.cs">
       <DependentUpon>NewPlateForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainForm.resx">
