--- a/Plate Visualization/Plate Visualization.csproj
+++ b/Plate Visualization/Plate Visualization.csproj
@@ -62,14 +62,29 @@
       <DependentUpon>NewPlateForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Node.cs" />
+    <Compile Include="NodeBondsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NodeBondsForm.Designer.cs">
+      <DependentUpon>NodeBondsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Plate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StiffnessForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StiffnessForm.Designer.cs">
+      <DependentUpon>StiffnessForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewPlateForm.resx">
       <DependentUpon>NewPlateForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NodeBondsForm.resx">
+      <DependentUpon>NodeBondsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -81,6 +96,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StiffnessForm.resx">
+      <DependentUpon>StiffnessForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
