Set elements stiffness

--- a/Plate Visualization/Plate Visualization.csproj
+++ b/Plate Visualization/Plate Visualization.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Element.cs" />
+    <Compile Include="Stiffness.cs" />
     <Compile Include="Graphic.cs" />
     <Compile Include="Helpers\MathHelper.cs" />
     <Compile Include="MainForm.cs">
