Correct view translation

--- a/Plate Visualization/Plate Visualization.csproj
+++ b/Plate Visualization/Plate Visualization.csproj
@@ -130,6 +130,18 @@
   <ItemGroup>
     <Folder Include="Events\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\node.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\element.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\2d.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\3d.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
