--- a/Plate Visualization/Plate Visualization.csproj
+++ b/Plate Visualization/Plate Visualization.csproj
@@ -154,6 +154,15 @@
   <ItemGroup>
     <None Include="resources\3d.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\add_load.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\stiffness.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\axis.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
