--- a/Plate Visualization/Plate Visualization.csproj
+++ b/Plate Visualization/Plate Visualization.csproj
@@ -87,6 +87,12 @@
     <Compile Include="models\Plate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="views\ResultForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="views\ResultForm.Designer.cs">
+      <DependentUpon>ResultForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="views\StiffnessForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +115,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="views\ResultForm.resx">
+      <DependentUpon>ResultForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="views\StiffnessForm.resx">
       <DependentUpon>StiffnessForm.cs</DependentUpon>
