--- a/Plate Visualization/Plate Visualization.csproj
+++ b/Plate Visualization/Plate Visualization.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>visualization.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -171,6 +174,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\axis.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="visualization.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
